fixed a bug where the ceedoku logo was too close to the edge of the game box when playing in landscape mode.

--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@
           --board-size: calc(var(--cell-size) * 9);
           font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
         }
+.brand {
+	transform:translatey(5px);
+	margin-left:5px
+}
 .delete-button:hover {
 	background: color-mix(in srgb, var(--delete-save) 70%, var(--surface-2)) !important
 }
